# lexi

./: .gitignore  Cargo.toml  build.sh  readme.md
.devcontainer/: devcontainer.json
docs/: CONTRIBUTING.md  configuration.md  development.md  examples.md  installation.md  usage.md
src/: main.rs
