[package]
name = "lexi"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "lexi"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0"
tokio = { version = "1.0", features = ["full"] }